test/files/neg/t562.check
t562.scala:10: error: super may not be used on value y
  override val y = super.y;
                         ^
one error found
